deployment/k8s/openiiot-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openiiot-server
  namespace: openiiot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openiiot-server
  template:
    metadata:
      labels:
        app: openiiot-server
    spec:
      containers:
        - name: openiiot-server
          image: openiiot_server:1.0.1
          ports:
            - containerPort: 8085
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
