deployment/k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: openiiot
spec:
  containers:
  - name: curl-container
    image: curlimages/curl
    command: ["sleep", "infinity"]
