deployment/k8s/openiiot-grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openiiot-grafana-service
  namespace: openiiot
spec:
  type: NodePort
  ports:
    - name: grafana3000
      port: 3000
      targetPort: 3000
      nodePort: 32000
  selector:
    app: openiiot-grafana
