deployment/k8s/openiiot-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openiiot-mysql-service
  namespace: openiiot
spec:
  type: NodePort
  ports:
    - name: mysql3306
      port: 3306
      targetPort: 3306
      nodePort: 32306
  selector:
    app: openiiot-mysql
