deployment/k8s/openiiot-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openiiot-web-service
  namespace: openiiot
spec:
  type: NodePort
  ports:
    - name: web80
      port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: openiiot-web
