deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: openiiot-nodered-ingress
  namespace: openiiot
spec:
  rules:
    - http:
        paths:
          - path: /openiiot/nodered
            pathType: Prefix
            backend:
              serviceName: openiiot-nodered-service
              servicePort: 1880
